# secure-mobile-rag-chatbot

./: .dockerignore  .env.example  .gcloudignore  .gitattributes  .gitignore  Dockerfile.fly  README.md  cloudbuild.yaml  docker-compose.yml  leaderboard_charts.py
android-app/: settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/androidTest/java/com/example/baselinechatbot/: ExampleInstrumentedTest.kt
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/example/baselinechatbot/: ChatApiService.kt  ChatMessage.kt  ChatScreen.kt  ChatViewModel.kt  MainActivity.kt  QueryModels.kt
android-app/app/src/main/java/com/example/baselinechatbot/ui/theme/: Color.kt  Theme.kt  Type.kt
android-app/app/src/main/res/values/: strings.xml  themes.xml
android-app/app/src/test/java/com/example/baselinechatbot/: ExampleUnitTest.kt
android-app/gradle/: libs.versions.toml
android-app/gradle/wrapper/: gradle-wrapper.properties
backend/: Dockerfile  ingest.py  pyproject.toml
backend/app/: cli.py  config.py  main.py
backend/app/evaluation/: leaderboard.py  runner.py  weave_eval.py
backend/app/firewall/: fw_l1.py  fw_l2.py
backend/app/ingestion/: chunker.py  cleaner.py  loader.py  pipeline.py
backend/app/models/: schemas.py
backend/app/rag/: embedder.py  generator.py  pipeline.py  retriever.py
backend/app/routes/: API_GUIDE.md  health.py  ingest.py  query.py  test.py
backend/app/vectorstore/: faiss_store.py
backend/tests/: test_fw_l1.py  test_fw_l2.py  test_generator.py  test_ingestion.py  test_loader.py  test_pipeline.py  test_retriever.py
data/golden_sets/: ADVERSARIAL_SOURCES.md  adversarial_queries.json  benign_queries.json  compound_queries.json  generate_adversarial.py  generate_benign.py  generate_compound_queries.py
data/processed/: phi_groundtruth.json
experiments/phi_ner/: PLAN.md  README.md
experiments/phi_ner/data/: train.json
experiments/phi_ner/notebooks/: 01_training.ipynb  02_evaluation.ipynb  03_error_analysis.ipynb  04_ablation.ipynb  05_baselines.ipynb  fix_notebooks.py
experiments/phi_ner/scripts/: cli.py  evaluate_model.py  generate_training_data.py  train.py
fw_l1/: ANDROID_DEPLOYMENT.md  PLAN_FW_L1.md  pyproject.toml
fw_l1/data/: test.json  train.json  val.json
fw_l1/evaluation/: evaluate.py  metrics.py
fw_l1/models/tokenizer/: tokenizer.json
fw_l1/notebooks/: 01_training.ipynb  02_fine_tuning_v2.ipynb  fix_notebooks.py
fw_l1/scripts/: analyze_test_run.py  cli.py  download_model.py  fuse_tokenizer.py  generate_training_data.py
fw_l2_ner/: OPTIMIZATION_PLAN.md  README.md  RESULTS.md  pyproject.toml
fw_l2_ner/notebooks/: 01_training.ipynb  03_error_analysis.ipynb  04_ablation.ipynb  phi_ner_report.md
fw_l2_ner/scripts/: cli.py  evaluate_model.py  generate_training_data.py  train.py
