[project]
name = "secure-mobile-rag-chatbot-backend"
version = "0.1.0"
description = "Cloud backend for the two-level firewall RAG system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sentence-transformers>=2.5.0",
    "faiss-cpu>=1.8.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "openai>=1.0.0",
    "weave>=0.51.0",
    "spacy>=3.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
