[project]
name = "secure-mobile-rag-chatbot-backend"
version = "0.1.0"
description = "Cloud backend for the two-level firewall RAG system"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "wandb>=0.25.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sentence-transformers>=2.5.0",
    "faiss-cpu>=1.8.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "openai>=1.0.0",
    "weave>=0.51.0",
    "spacy>=3.7.0",
    "scikit-learn>=1.4.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.17.0",
    "accelerate>=0.30.0",
]

[project.scripts]
ingestion = "app.cli:ingestion"
data-show = "app.cli:data_show"
faiss-check = "app.cli:faiss_check"
search = "app.cli:search"
generate-adversarial-queries = "app.cli:generate_adversarial_queries"
generate-benign-queries = "app.cli:generate_benign_queries"
generate-compound-queries = "app.cli:generate_compound_queries"
evaluate = "app.cli:evaluate"
leaderboard = "app.cli:leaderboard"
help = "app.cli:help"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
