[project]
name = "fw-l1-experiment"
version = "0.1.0"
description = "Train query classifier for on-device FW-L1 firewall"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "wandb>=0.25.0",
    "weave>=0.51.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.17.0",
    "accelerate>=0.30.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
l1-generate = "scripts.cli:generate"
l1-train = "scripts.cli:train"
l1-evaluate = "scripts.cli:evaluate"
l1-export = "scripts.cli:export"
l1-download = "scripts.cli:download"
l1-help = "scripts.cli:help"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]