[project]
name = "pii-ner-experiment"
version = "0.1.0"
description = "Fine-tune BERT-like models for PII NER in FW-L2"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "datasets>=2.18.0",
    "wandb>=0.25.0",
    "numpy>=1.26.0",
    "spacy>=3.7.0",
    "accelerate>=0.30.0",
    "python-dotenv>=1.0.0",
    "weave>=0.51.0",
]

[project.scripts]
ner-generate = "scripts.cli:generate"
ner-train = "scripts.cli:train"
ner-evaluate = "scripts.cli:evaluate"
ner-compare = "scripts.cli:compare"
ner-export = "scripts.cli:export"
ner-help = "scripts.cli:help"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]